apps/frappe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frappe-service
  labels:
    app: frappe
spec:
  selector:
    app: frappe
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
