apps/frappe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frappe
  annotations:
    cert-manager.io/cluster-issuer: local-selfsigned
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - frappe.dairyndumberi.local
      secretName: frappe-tls
  rules:
    - host: frappe.dairyndumberi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frappe-service
                port:
                  number: 8000
